@@ -1,3 +1,7 @@
+2008-12-22 Steffen Kamper <info@sk-typo3.de>
+
+	* feature #9990: Enable option to use BE-module with docheader
+
 2008-11-08 Francois Suter <francois@typo3.org>
 
 	* Corrected wrong reference to page id in example modfunc code
